--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,23 @@
 
+spring:
+  sql:
+    init:
+      mode: embedded
+      continue-on-error: true
+      schema-locations: classpath:/database/schema.sql
+      username: postgres
+      password: postgres
+  datasource:
+    url: jdbc:postgresql://localhost:5432/example_spring_data_jpa
+    username: postgres
+    password: postgres
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+
